--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "paths": {
+      "@components/navigation/*" : ["./components/navigation/*"],
+      "@components/ui/*" : ["./components/ui/*"],
+      "@components/utils/*" : ["./components/utils/*"],
+      "@styles/*" : ["./styles/*"]
+    }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "styles/components/utils"],
   "exclude": ["node_modules"]
 }
