--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "latest",
     "iron-session": "^6.2.1",
     "next": "^12.3.1",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.55.0"
