--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,41 +1,21 @@
 {
-  "name": "Nutri App",
+  "name": "Nutrir App",
   "short_name": "Nutrir",
-  "theme_color": "#003892",
-  "background_color": "rgba(61,136,236,255)",
-  "display": "minimal-ui",
+  "theme_color": "#6ec3c1",
+  "background_color": "#6ec3c1",
+  "display": "standalone",
   "orientation": "",
   "scope": "/",
   "start_url": "/",
   "icons": [
     {
-      "src": "images/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
-    {
-      "src": "images/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "images/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    },
-    {
-      "src": "images/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "images/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png"
-    },
-    {
       "src": "images/icons/icon-192x192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "images/icons/icon-256x256.png",
+      "sizes": "256x256",
       "type": "image/png"
     },
     {
