--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/moment": "^2.16.1",
     "@emotion/cache": "latest",
     "@emotion/react": "latest",
     "@emotion/server": "latest",
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "@mui/x-data-grid": "^5.17.13",
+    "@mui/x-date-pickers": "^5.0.8",
     "iron-session": "^6.2.1",
+    "moment": "^2.29.4",
     "next": "^12.3.1",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
