--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-REACT_APP_API_URL=https://api.comedores.1961.com.ar
+NEXT_PUBLIC_API_BASE_URL=
+
+NEXT_PUBLIC_COMEDOR=
+NEXT_PUBLIC_API_COMEDORES_GET_ALL=
