--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@mui/material": "latest",
     "@mui/x-data-grid": "^5.17.13",
     "@mui/x-date-pickers": "^5.0.8",
+    "axios": "^1.2.1",
     "iron-session": "^6.2.1",
+    "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "next": "^12.3.1",
     "next-pwa": "^5.6.0",
