--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-data-grid": "^5.17.13",
     "@mui/x-date-pickers": "^5.0.8",
     "axios": "^1.2.1",
+    "chart.js": "^4.2.1",
     "formik": "^2.2.9",
     "iron-session": "^6.2.1",
     "js-cookie": "^3.0.1",
@@ -26,6 +27,7 @@
     "next": "^12.3.1",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.55.0",
     "yup": "^0.32.11"
