--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-NEXT_PUBLIC_API_BASE_URL=
+# usado por el navegador (público)
+NEXT_PUBLIC_API_BASE_URL=http://127.0.0.1:3600/
 
-NEXT_PUBLIC_COMEDOR=
-NEXT_PUBLIC_API_COMEDORES_GET_ALL=
+# usado por API Routes / SSR del servidor
+INTERNAL_API_BASE=http://127.0.0.1:3600/
